--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,18 @@
-/BookOfIllusions.class
-/CowTimer.class
-/FortuneTeller.class
-/Jeopardy.class
-/Movie.class
-/NetflixQueue.class
 /Recipes.html
-/SimonSays.class
 /creepy-noise.wav
 /extra/
 /fortune teller.png
 /gridworld.jar
 /jeopardy.wav
 /moo.wav
+/BookOfIllusions.class
+/CowTimer.class
+/FortuneTeller.class
+/Jeopardy.class
+/Movie.class
+/NetflixQueue.class
+/SimonSays.class
 /nastySurprise.class
+/NastySurprise.class
+/dog.jpg
+/spoopy.jpeg
