--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,22 +1,22 @@
 /Recipes.html
 /creepy-noise.wav
+/down.jpg
 /extra/
 /fortune teller.png
 /gridworld.jar
 /jeopardy.wav
+/left.png
 /moo.wav
+/right.jpeg
+/up.jpg
 /BookOfIllusions.class
 /CowTimer.class
 /FortuneTeller.class
 /Jeopardy.class
 /Movie.class
+/NastySurprise.class
 /NetflixQueue.class
 /SimonSays.class
-/nastySurprise.class
-/NastySurprise.class
-/dog.jpg
-/spoopy.jpeg
-/up.jpg
-/down.jpg
-/right.jpeg
-/left.png
+/left.jpeg
+/left.jpg
+/right.jpg
