Slot Machine IP

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,27 +7,24 @@
 /gridworld.jar
 /illusion.jpg
 /jeopardy.wav
-/left.jpg
-/moo.wav
-/opticalfeature.jpg
-/right.jpg
-/spooky noise.wav
 /BookOfIllusions.class
 /Calculator.class
 /ChuckleClicker.class
 /CowTimer.class
 /FortuneTeller.class
-/GetLatestTweet.class
 /Jeopardy.class
 /Movie.class
 /NastySurprise.class
 /NetflixQueue.class
 /PigLatinTranslator.class
 /SimonSays.class
+/SlotMachine.class
 /TypingTutor.class
 /WhackAMole.class
+/left.jpg
+/moo.wav
+/opticalfeature.jpg
+/orange.png
+/right.jpg
+/spooky noise.wav
 /up.jpg
-/SlotMachine.class
-/cherry.png
-/orange.jpg
-/lime.png
