Slot Machine Finished

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,9 @@
 /Recipes.html
+/cherry.png
 /cow.wav
-/creepy-noise.wav
 /down.jpg
 /extra/
 /fortune teller.png
-/gridworld.jar
-/illusion.jpg
-/jeopardy.wav
 /BookOfIllusions.class
 /Calculator.class
 /ChuckleClicker.class
@@ -22,9 +19,9 @@
 /TypingTutor.class
 /WhackAMole.class
 /left.jpg
+/lime.png
 /moo.wav
 /opticalfeature.jpg
-/orange.png
 /right.jpg
 /spooky noise.wav
 /up.jpg
