Slot Machine Finished

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,13 @@
 /Recipes.html
-/cherry.png
+/orange.png
 /cow.wav
+/creepy-noise.wav
 /down.jpg
 /extra/
 /fortune teller.png
+/gridworld.jar
+/illusion.jpg
+/jeopardy.wav
 /BookOfIllusions.class
 /Calculator.class
 /ChuckleClicker.class
@@ -19,7 +23,6 @@
 /TypingTutor.class
 /WhackAMole.class
 /left.jpg
-/lime.png
 /moo.wav
 /opticalfeature.jpg
 /right.jpg
